Made changes to a hyperlink line in index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <figcaption>Video 1: UEFA Champions League explained</figcaption>
                     </figure>
                     <br>
-                    <a href="https://en.wikipedia.org/wiki/UEFA_Champions_League">Read more on the UEFA Champions League</a>
+                    <a href="https://en.wikipedia.org/wiki/UEFA_Champions_League" target="_blank">Read more on the UEFA Champions League</a>
                     
                 </section>
                 
