--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>Miroslav Klose</td>
+                            <td>16</td>
                         </tr>
                         <tr>
                             <td></td>
